--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     &copy; <span id="footerYear"></span> TRAIN 303. ALL RIGHTS RESERVED.
   </footer>
   <script>document.getElementById('footerYear').innerText = new Date().getFullYear();</script>
+  <script src="js/modals.js"></script>
   <script src="js/login.js"></script>
 </body>
 
