--- a/quiz.html
+++ b/quiz.html
@@ -134,6 +134,7 @@
     &copy; <span id="footerYear"></span> TRAIN 303. ALL RIGHTS RESERVED.
   </footer>
   <script>document.getElementById('footerYear').innerText = new Date().getFullYear();</script>
+  <script src="js/modals.js"></script>
   <script src="js/participant.js"></script>
 </body>
 
