--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
     <button id="loginBtn" onclick="attemptLogin()">
       <i class="fa-solid fa-chess-king"></i> Enter the Arena
     </button>
-  </div>
-
-  <!-- Floating Preview Button -->
+  </div> <!-- Floating Preview Button -->
   <a href="preview.html" target="_blank" class="previewBtn">
     <i class="fa-solid fa-eye"></i> Preview
   </a>
-
   <footer class="site-footer">
     &copy; <span id="footerYear"></span> TRAIN 303. ALL RIGHTS RESERVED.
   </footer>
