--- a/leaderboard.html
+++ b/leaderboard.html
@@ -20,7 +20,6 @@
         <h1>LEADERBOARD</h1>
         <p>King's Gambit Quiz</p>
     </div>
-
     <div id="lbStatus">
         <span id="liveIndicator">
             <span></span>
@@ -28,19 +27,15 @@
         </span>
         <span id="lastUpdated">Updated just now</span>
     </div>
-
     <div id="lbContent">
         <!-- Populated by JS -->
         <div class="lb-locked">
             <div class="lock-icon"><i class="fa-solid fa-spinner fa-spin"></i></div>
             <h2>Loading…</h2>
         </div>
-    </div>
-
-    <button class="refresh-btn" onclick="manualRefresh()">
+    </div> <button class="refresh-btn" onclick="manualRefresh()">
         <i class="fa-solid fa-rotate-right"></i> Refresh
     </button>
-
     <footer class="site-footer">
         &copy; <span id="footerYear"></span> TRAIN 303. ALL RIGHTS RESERVED.
     </footer>
