--- a/preview.html
+++ b/preview.html
@@ -17,7 +17,6 @@
 <body>
 
     <div class="previewBadge"><i class="fa-solid fa-eye"></i> Preview Mode — Read Only</div>
-
     <div class="previewWrap">
         <div id="previewPoints" class="pointsBadge">10 PTS</div>
         <div id="previewQ" class="empty">Waiting for question...</div>
@@ -45,25 +44,19 @@
                 <div class="teamBadges" id="badges3"></div>
             </div>
         </div>
-    </div>
-
-    <!-- Game Frozen Overlay -->
+    </div> <!-- Game Frozen Overlay -->
     <div id="freezeOverlay" style="display:none;">
         <i class="fa-solid fa-snowflake"></i>
         <h1>GAME PAUSED</h1>
         <p>The administrator has paused the game.</p>
-    </div>
-
-    <!-- Announcement Overlay -->
+    </div> <!-- Announcement Overlay -->
     <div id="annOverlay" class="announcement-overlay" style="display:none;">
         <div class="announcement-card">
             <div class="announcement-label">Announcement</div>
             <div class="announcement-icon"><i class="fa-solid fa-bullhorn"></i></div>
             <div id="annMsg" class="announcement-text"></div>
         </div>
-    </div>
-
-    <!-- Leaderboard Global Overlay -->
+    </div> <!-- Leaderboard Global Overlay -->
     <div id="lbOverlay" class="announcement-overlay" style="display:none; flex-direction: column;">
         <div class="lb-header" style="margin-top: 40px; transform: scale(0.8);">
             <div class="logo"><i class="fa-solid fa-chess-pawn"></i></div>
@@ -73,7 +66,6 @@
             <!-- Populated by JS -->
         </div>
     </div>
-
     <footer class="site-footer">
         &copy; <span id="footerYear"></span> TRAIN 303. ALL RIGHTS RESERVED.
     </footer>
